# books-rust-axum

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  todo.md
migrations/: 20250208092858_init.down.sql  20250208092858_init.up.sql  20250218162328_add_books.down.sql  20250218162328_add_books.up.sql
src/: api_doc.rs  lib.rs  main.rs  route.rs  settings.rs
src/books/: book_handler.rs  genres_handler.rs  mod.rs  model.rs  response.rs  route.rs  schema.rs
src/middleware/: jwt_auth.rs
src/service/: cache_redis.rs  mod.rs  response_server.rs
src/users/: handler.rs  mod.rs  model.rs  response.rs  route.rs  schema.rs  token.rs
tests/common/: mod.rs
tests/integration/: user_test.rs
